# Tracking3D_Example

./: .gitignore  CMakeLists.txt  CalibrationWindow.cpp  CalibrationWindow.h  CalibrationWindow.ui  ImageManagement.h  QinStyle.cxx  QinStyle.h  QtWrapvtkTracking3D.h  README  README.md  ResliceView.cpp  ResliceView.h  SoftWareConfigure.xml  TrackerBase.h  calibrateRW.h  main.cxx  mainWindow.cpp  mainWindow.h  mainWindow.ui  vtkTracking3D.cxx  vtkTracking3D.h  vtkTrackingMarkCapture.cxx  vtkTrackingMarkCapture.h  vtkTrackingMarkCapture.hxx  vtkTrackingRegistration.cxx  vtkTrackingRegistration.h  vtkTrackingSlice.cxx  vtkTrackingSlice.h
API/: CMakeLists.txt  CommUtilities.cpp  CommandHandling.cpp  CommandParsing.cpp  INIFileRW.h  PolarisVicraConfiguration.cpp  PolarisVicraConfiguration.h  TrackerPolarisVicra.ini  resource.h
API/null/: ComPortSettings.cpp  ComPortSettings.h  ComPortTimeout.cpp  CombinedAPISample.h  IlluminatorFiringRate.cpp  ProgramOptions.cpp  StdAfx.cpp
ATC3DG/: ATC3DG.h  ATC3DG.ini  ATC3DGConfiguration.cpp  ATC3DGConfiguration.h  CMakeLists.txt  README  TrackerBase.h
Calibration/: CMakeLists.txt  Calibration.cpp  Calibration.h  README
IP_check/: CMakelists.txt  GetAdaptersInfo.cpp
PivotCalibration/: CMakeLists.txt  PivotCalibration.cpp  PivotCalibration.h  PivotCalibration2.cpp  PivotCalibration2.h  README.md  test.cpp
PolarisVicra/: APIStructures.h  CMakeLists.txt  CommandHandling.cpp  CommandHandling.h  Conversions.cpp  Conversions.h  INIFileRW.cpp  PolarisVicraConfiguration.cpp  PolarisVicraConfiguration.h  TrackerPolarisVicra.ini  readme.txt
PolarisVicra/configFile/: TrackerPolarisVicra.ini
PolarisVicra/configFile/ROM/: Calibrate.xml  Calibrate1.xml
PolarisVicra/null/: CombinedAPISample.cpp  CombinedAPISampleDlg.cpp  CombinedAPISampleDlg.h  IlluminatorFiringRate.h  NewAlertFlagsDlg.cpp  NewAlertFlagsDlg.h  ProgramOptions.h  ROMFileDlg.cpp  ROMFileDlg.h  StdAfx.h  SystemFeaturesDlg.cpp  SystemFeaturesDlg.h
PolarisVicra_test/: CMakeLists.txt  Readme.md  api_module.cpp  api_module.h  main.cpp
TrackingClass/: CMakeLists.txt  ConfigurationParse.cpp  ConfigurationParse.h  QtWrapvtkTracking3D.h  README  TrackerBase.h  vtkTracking3D.cxx  vtkTracking3D.h  vtkTrackingMarkCapture.cxx  vtkTrackingMarkCapture.h  vtkTrackingMarkCapture.hxx  vtkTrackingRegistration.cxx  vtkTrackingRegistration.h  vtkTrackingResliceView.cpp  vtkTrackingResliceView.h
VisualizationUtil/: CMakeLists.txt  QtWrapvtkTracking3D.h  vtkTracking3D.cxx  vtkTracking3D.h  vtkTrackingResliceView.cpp  vtkTrackingResliceView.h
atclib/: ATC3DGConfiguration.cpp  ATC3DGConfiguration.h  CMakeLists.txt  TrackerBase.h
vtkTrackerUtil/: CMakeLists.txt  ConfigurationParse.cpp  ConfigurationParse.h  README.md  TrackerBase.h  util.h  vtkTrackerUtil.cpp  vtkTrackerUtil.h  vtkTrackingMarkCapture.cxx  vtkTrackingMarkCapture.h
vtkTrackerUtil_test/: CMakeLists.txt  Readme.md  main.cxx  trackingclass_test.cxx  trackingclass_test.h  vtkTrackerUtil_test.cxx  vtkTrackerUtil_test_Win.cpp  vtkTrackerUtil_test_Win.h  vtkTrackerUtil_test_Win.ui
vtkTrackerUtil_test/registration/: AbstractFilter.cxx  AbstractFilter.h  CmakeLists.txt  ICPRegistrationFilter.cxx  ICPRegistrationFilter.h  LandmarkRegistrationFilter.cxx  LandmarkRegistrationFilter.h  Readme.md
